增加消息队列